# takao

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .readthedocs.yml  LICENCE  README.md  babel.config.mjs  package-lock.json  package.json  playwright.config.ts  postcss.config.js  pyproject.toml  renovate.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: test.yml
docs/source/: conf.py  index.rst  installation.rst
docs/source/test-pages/: admonitions.rst  basic-lists.rst  blocks.rst  description-lists.rst  intro.rst  mixed-content.rst  tables.rst
scripts/: build.py  build_docs.py  package-lock.json  publish.py  run_e2e_tests.py  run_e2e_tests_update_snapshots.py
scripts/utils/: container.py  npm.py
static/: takao.ts
static/styles/: admonitions.pcss  document.pcss  global.pcss  helpers.pcss  index.pcss  layout.pcss  mobile-menubar.pcss  page-nav.pcss  readthedocs.pcss  sidebar.pcss  vars.pcss
takao/: __init__.py  layout.html  theme.conf  theme.toml
takao/partials/: global-toc.jinja2  mobile-menubar.jinja2  page-nav.jinja2  prev-next.jinja2  readthedocs-menu.jinja2
test/e2e/: visual.spec.ts
