[project]
name = "takao"
version = "0.2.2"
description = "A dark theme for Sphinx."
authors = [{ name = "Reupen Shah" }]
requires-python = ">=3.11"
dependencies = [
    "sphinx>=4",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reupen/takao"

[project.entry-points."sphinx.html_themes"]
takao = "takao"

[project.urls]
repository = "https://github.com/reupen/takao.git"
github = "https://github.com/reupen/takao"

[dependency-groups]
dev = [
    "djlint>=1.19.14",
    "sphinx-sitemap>=2.5.0",
    "xmltodict>=0.13,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["takao"]
artifacts = ["takao/static/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["takao"]
artifacts = ["takao/static/**/*"]

[tool.djlint]
profile="jinja"
ignore="H020"
indent=2
extension="jinja2"

[tool.ruff.lint]
extend-select = ["B0", "I", "SIM", "UP"]

[tool.ruff.lint.isort]
split-on-trailing-comma=false
